# GMolModel

./: .bAddParams.hpp.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  VelocityVerlet.py  cmake_cmake.sh  cmake_install_dep.sh  cmake_regenerateAll.sh  cmake_regenerateMolmodel.sh  inp_tests  test_GCHMC.py  x.bad.dEp
build-debug/: CMakeCache.txt
extra_tools/: analyzeAlkans.py  analyzePolyAla.py  autocorrelation.py  extractLabels.py  mixedMC.py  robopdb2crd.py  run_sims.py
extra_tools/pymol/: saveflex_pymol.py  saveflex_pymol.readme.txt
gmolmodel/: MidVVIntegrator.cpp  MidVVIntegrator.cpp.bkp1  MidVVIntegrator.cpp.bkp2  MidVVIntegrator.cpp.bkp3  MidVVIntegrator.cpp.bkp4  MidVVIntegrator.cpp.bkp5  bAddParams.cpp  bMoleculeReader.cpp  simmain.cpp  simmain.cpp.20161118.crash  simmain.cpp.bkp
include/gmolmodel/: .MonteCarloSampler.hpp.swp  .bSystem.hpp.swp  ConformationalSearch.hpp  Context.hpp  ContextRep.hpp  CurrentState.hpp  FixmanTorque.hpp  GirolamiSampler.hpp  HMCSOA.hpp  HamiltonianMonteCarloSampler.hpp  ICurrentState.hpp  IInitialContext.hpp  IMonteCarloSampler.hpp  ISimulator.hpp  IState.hpp  IWorld.hpp  InitialContext.hpp  InitialContextRep.hpp  MidVVIntegrator.hpp  MonteCarloSampler.hpp  MyState.hpp  ParaMolecularDecorator.hpp  Robo.hpp  Sampler.hpp  SetupReader.hpp  Topology.hpp  World.hpp  bAddParams.hpp  bBond.hpp  bMainResidue.hpp  bMoleculeReader.hpp  bSpecificAtom.hpp  bSystem.hpp  bgeneral.hpp  readAmberInput.hpp  simmain.hpp
src/: .CMakeLists.txt.swp  .MonteCarloSampler.cpp.swp  .bSystem.cpp.swp  CMakeLists.txt  ConformationalSearch.cpp  Context.cpp  ContextRep.cpp  CurrentState.cpp  FixmanTorque.cpp  GirolamiSampler.cpp  HMCSOA.cpp  HamiltonianMonteCarloSampler.cpp  ICurrentState.cpp  IInitialContext.cpp  IMonteCarloSampler.cpp  IState.cpp  InitialContext.cpp  InitialContextRep.cpp  MidVVIntegrator.cpp  MonteCarloSampler.cpp  MyState.cpp  ParaMolecularDecorator.cpp  Sampler.cpp  SetupReader.cpp  Topology.cpp  TrivalentAtomTetra.cpp  World.cpp  bAddParams.cpp  bArgParser.cpp  bBond.cpp  bMainResidue.cpp  bMoleculeReader.cpp  bSpecificAtom.cpp  bSystem.cpp  bgeneral.cpp  readAmberInput.cpp  simmain.cpp
src/format/: TrajectoryObject.cpp
tests/: .TestMonteCarloSampler.cpp.swp  CMakeLists.txt  Robosample.cpp  TestAmberInput.cpp  TestBallLongPendulum.cpp  TestContext.cpp  TestGmolmodelNative.cpp  TestHMCSOA.cpp  TestHamiltonianMonteCarlo.cpp  TestInitialContext.cpp  TestMassDeterminant.cpp  TestMassSqrtAndDet.cpp  TestMatrix.cpp  TestMixing.cpp  TestMixing.cpp.bkp  TestMolmodelBasic.cpp  TestMolmodelBuildCompound.cpp  TestMonteCarloSampler.cpp  TestNative.cpp  TestOpenMMBasic.cpp  TestPDBReaderMolModel.cpp  TestParallelExecutor.cpp  TestPrmCrd.cpp  TestPrmCrdPeptide.cpp  TestPrmCrdProtein.cpp  TestSampler.cpp  TestWriteDCD.cpp  native.cpp
tests_inputs/: example-input  inp  inp_1w  inp_2world  lin_bead.py
tests_inputs/CCdomains/MLAmono/: mlaA.mol2  mlaA.mol2.v1
tests_inputs/CCdomains/Rx_Xray/: 4m70A.inpcrd  4m70A.mol2  4m70A.mol2.v1  4m70A.prmtop  tleap.txt
tests_inputs/CCdomains/Rx_asMLAmono/: rxA.mol2  rxA.mol2.v1  tleap.txt
tests_inputs/buta/: ATOMTYPE.INF  but.lib  ligand.db  ligand.inpcrd  ligand.mol2  ligand.prmtop  ligand.sdf  tleap.in
tests_inputs/decalaB/: decala.flexible  decala.mol2  decala.rigid  decala_CA+O_bonds.flex  decala_CA_bonds.flex  decala_metil_fixed.flex  ligand.prmtop
tests_inputs/dial/: ATOMTYPE.INF  README.txt  dial.mol2  dial.prmtop  dial.rb  dial.vmd.mol2  ligand.CA_Os.flex  ligand.CA_noh.flex  ligand.db  ligand.inpcrd  ligand.mol2  ligand.mol2.bkp  ligand.mol2.protTypes  ligand.prmtop  ligand.rb.all  ligand.rb.ini  ligand.sdf
tests_inputs/lin4/: ligand.db  ligand.frcmod.BAT  ligand.sdf
tests_inputs/lin4/lin4.mod2018/: .lin4.frcmod  Structure3D_CID_6326.sdf  ligand.mol2  ligand.prmtop  tleap.in
tests_inputs/lin5/: 1  README.txt  ligand  ligand.lib  ligand.mol2  ligand.prmtop
tests_inputs/oxyg/: ligand.inpcrd  ligand.mol2  ligand.prmtop  tleap.in
tests_inputs/pani/: panitumumab.inpcrd  setup.tleap
tests_inputs/paniA/: ligand.inpcrd  ligand.mol2  panitumumab_eq_1ch.prmtop
tests_inputs/paniAini/: ligand.inpcrd  ligand.mol2  panitumumab_eq_1ch.mol2.v1
tests_inputs/paniB/: ligand.mol2  ligand.prmtop
tests_inputs/paniD/: ligand.inpcrd
tests_inputs/pani_2ch_cyx/: chAB_cyx.flex  chAB_cyx.inpcrd  chAB_cyx.mol2
tests_inputs/pani_4ch/: chA.prmtop  chB.flex  chC.inpcrd  chC.mol2  chC.prmtop  chD.mol2  chD.prmtop  setup.tleap
tests_inputs/ymd/: ligand.prmtop  nat_nat_peponly_v2.inpcrd
